--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
                         <h1 id="app" class="display-5 fw-bold text-white text-shadow-1 lh-1 mb-3 rubik-pixels-regular">
                             Yailin Caro
                         </h1>
-                        <p class="lead text-white text-shadow-1">Una desarrolladora frontend junior, apasionada por las
-                            comunidades, los gatos, los
-                            perros y
-                            las bicicletas. Una lectora de closet por las noches y creadora de códigos por las tardes
+                        <p class="lead text-white text-shadow-1">¡Hola!Soy Yailin y estoy cursando el 4° año de la carrera de informática.
+                            Me gusta mucho la tecnología y la música 
                         </p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                             <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contáctame</button>
@@ -91,8 +89,8 @@
                         class="d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 py-2 px-3 rounded">
                         <i class="bi bi-code-square"></i>
                     </div>
-                    <h3 class="fs-2 text-body-emphasis my-2">Desarrollo web</h3>
-                    <p>Conocimientos en HTML, JS, CSS.</p>
+                    <h3 class="fs-2 text-body-emphasis my-2">Informática</h3>
+                    <p>Conocimientos en Cisco Packet Tracer, HTML, C#</p>
                 </div>
 
                 <div class="feature col">
@@ -101,7 +99,7 @@
                         <i class="bi bi-people"></i>
                     </div>
                     <h3 class="fs-2 text-body-emphasis my-2">Trabajo en equipo</h3>
-                    <p>Colaboro con equipos multidisciplinarios.</p>
+                    <p>Trabajo muy bien en equipo.</p>
                 </div>
 
                 <div class="feature col">
@@ -128,12 +126,11 @@
                     <div id="proyecto-1" class="proyecto card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
 
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Clon de google.</h3>
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Mi Primer Página Web</h3>
 
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="d-flex align-items-center me-3">
                                     <i class="bi bi-code-square"></i>
-                                    <a href="http://" target="_blank" class="ps-3">URL</a>
                                 </li>
                             </ul>
 
@@ -147,12 +144,11 @@
                     <div id="proyecto-2" class="proyecto card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
 
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Juego: Manzanas</h3>
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Clon Google</h3>
 
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="d-flex align-items-center me-3">
                                     <i class="bi bi-code-square"></i>
-                                    <a href="http://" target="_blank" class="ps-3">URL</a>
                                 </li>
                             </ul>
 
@@ -174,24 +170,24 @@
 
                     <div class="carousel-item active">
                         <article class="container text-center">
-                            <img class="rounded-5" src="assets/ada.webp" height="200" alt="Ada Lovelace">
-                            <h3 class="my-3">Ada Lovelace</h3>
-                            <p>"Yailin es una estudiante excepcional."</p>
+                            <img class="rounded-5" src="assets/gladys.png" height="200" alt="Gladys Caro">
+                            <h3 class="my-3">Gladys Caro</h3>
+                            <p>"Yailin es una persona que hace lo que le apasiona."</p>
                         </article>
                     </div>
 
                     <div class="carousel-item">
                         <article class="container text-center">
-                            <img class="rounded-5" src="assets/grace.jpg" height="200" alt="Ada Lovelace">
-                            <h3 class="my-3">Grace Murray</h3>
-                            <p>"Yailin es una estudiante excepcional."</p>
+                            <img class="rounded-5" src="assets/marcela.png" height="200" alt="Marcela Cortez">
+                            <h3 class="my-3">Marcela Cortez</h3>
+                            <p>"Yailin se esfuerza en lo que hace."</p>
                         </article>
                     </div>
 
                     <div class="carousel-item">
                         <article class="container text-center">
-                            <img class="rounded-5" src="assets/Hedy.jpeg" height="200" alt="Ada Lovelace">
-                            <h3 class="my-3">Hedy Lamarr</h3>
+                            <img class="rounded-5" src="assets/jime.png" height="200" alt="Jimena Ponce">
+                            <h3 class="my-3">Jimena Ponce</h3>
                             <p>"Yailin es una estudiante excepcional."</p>
                         </article>
                     </div>
@@ -220,24 +216,24 @@
             NUNCA RENDIRNOS."</h4>
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item fs-1 ">
-                <a href="https://github.com/malibb/" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://github.com/YailinCaro" target="_blank" class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-github text-white"></i>
                 </a>
             </li>
 
             <li class="nav-item fs-1">
-                <a href="https://github.com/malibb/" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://github.com/YailinCaro" target="_blank" class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-linkedin text-white"></i>
                 </a>
             </li>
             <li class="nav-item fs-1 ">
-                <a href="https://github.com/malibb/" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://www.instagram.com/yailin_caro/" target="_blank" class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-instagram text-white"></i>
                 </a>
             </li>
 
             <li class="nav-item fs-1">
-                <a href="https://github.com/malibb/" target="_blank" class="nav-link px-5 text-body-secondary">
+                <a href="https://www.tiktok.com/@yailincaro" target="_blank" class="nav-link px-5 text-body-secondary">
                     <i class="bi bi-tiktok text-white"></i>
                 </a>
             </li>
