--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container col-xxl-8 px-4 py-5 d-flex justify-content-start align-items-center">
                 <div class="row flex-lg-row align-items-center g-5 py-5">
                     <div class="col-lg-6 bg-black p-3">
-                        <h1 id="app" class="display-5 fw-bold text-white text-shadow-1 lh-1 mb-3 rubik-pixels-regular">
+                        <h1 id="app" class="display-5 fw-bold text-white  lh-1 mb-3 text-shadow-1">
                             Yailin Caro
                         </h1>
                         <p class="lead text-white text-shadow-1">¡Hola!Soy Yailin y estoy cursando el 4° año de la carrera de informática.
